# libWRP-SQLite3

./: LICENSE  README.md  install.sh  wercker-box.yml  wercker.yml
documents/: Doxyfile
documents/html/: SQLite3_8hpp_source.html  annotated.html  c_8hpp_source.html  classes.html  detail_8hpp_source.html  dir_81d98b62c6ebb8960c78158f9481f27f.html  dir_9c15f40e3ed7b22f7a6c0fa09ca6ea7b.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  global_8hpp_source.html  index.html  misc_8hpp_source.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column-members.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01double_01_4-members.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01double_01_4.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01int32__t_01_4-members.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01int32__t_01_4.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01int64__t_01_4-members.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01int64__t_01_4.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01std_1_1string_01_4-members.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01std_1_1string_01_4.html  structWonderRabbitProject_1_1SQLite3_1_1detail_1_1column_3_01N_00_01std_1_1u16string_01_4-members.html  (+19 more)
documents/latex/: annotated.tex  (+26 more)
example/: CMakeLists.txt  example_01.cxx  example_02.cxx  example_03.cxx
(+11 files in other folders)
